<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="com.MeetUp.meetup.screens.auth.modules.signup.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_24_dp">

            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_24_dp"
                android:src="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_56_dp"
                android:textColorHint="@color/primaryTextColor"
                app:errorTextAppearance="@style/AuthErrorStyle"
                app:hintTextAppearance="@style/AuthInputTextStyle">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_46_dp"
                    android:hint="@string/user_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/primaryTextColor"
                    android:theme="@style/AuthEditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16_dp"
                android:textColorHint="@color/primaryTextColor"
                app:errorTextAppearance="@style/AuthErrorStyle"
                app:hintTextAppearance="@style/AuthInputTextStyle">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_46_dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primaryTextColor"
                    android:theme="@style/AuthEditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16_dp"
                android:textColorHint="@color/primaryTextColor"
                app:errorTextAppearance="@style/AuthErrorStyle"
                app:hintTextAppearance="@style/AuthInputTextStyle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primaryTextColor">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_46_dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryTextColor"
                    android:theme="@style/AuthEditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/choose_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_36_dp"
                android:drawableStart="@drawable/ic_location"
                android:hint="@string/choose_country"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_64_dp"
                android:layout_marginTop="@dimen/spacing_36_dp"
                android:enabled="false"
                android:text="@string/create_account"
                android:theme="@style/AuthButtonStyle" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
