<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="com.MeetUp.meetup.screens.auth.modules.signin.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_24_dp">

            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_24_dp"
                android:src="@mipmap/ic_launcher" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signin_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_56_dp"

                android:textColorHint="@color/primaryTextColor"
                app:errorTextAppearance="@style/AuthErrorStyle"
                app:hintTextAppearance="@style/AuthInputTextStyle">

                <EditText
                    android:id="@+id/edittext_email_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signUp_email_hint_text"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primaryTextColor"
                    android:theme="@style/AuthEditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signin_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16_dp"
                android:textColorHint="@color/primaryTextColor"
                app:errorTextAppearance="@style/AuthErrorStyle"
                app:hintTextAppearance="@style/AuthInputTextStyle"
                app:passwordToggleTint="@color/primaryTextColor"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_password_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signUp_pass_hint_text"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryTextColor"
                    android:theme="@style/AuthEditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/sign_in_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_36_dp"
                android:visibility="invisible"
                android:drawableStart="@drawable/ic_location"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/spacing_64_dp"
                android:layout_marginTop="@dimen/spacing_36_dp"
                android:enabled="false"
                android:text="@string/signUp_login_btt"
                android:textColor="@color/primaryTextColor"
                android:theme="@style/AuthButtonStyle" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/layout_loader_container"/>
</FrameLayout>
